fix(advanced): add paramater on endpoints
